[package]
name = "agent-history"
version = "0.1.0"
edition = "2021"
description = "Unified Claude Code + Codex CLI session search"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
thiserror = "2.0"
home = "0.5"
rayon = "1.10"
colored = "3.0"
crossterm = "0.29"
atty = "0.2"
pulldown-cmark = "0.13.3"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
textwrap = "0.16"
terminal-light = "1.0"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.27.0"
